lib/include/mxf/mxf_header_metadata.h

typedef struct
{
    mxfKey key;
    uint16_t tag;
    int isPersistent;
    uint16_t length;
    uint8_t* value;
    struct _MXFMetadataSet* set;
} MXFMetadataItem;
typedef struct _MXFMetadataSet
{
    mxfKey key;
    mxfUUID instanceUID;
    MXFList items;
    struct _MXFHeaderMetadata* headerMetadata;
    uint64_t fixedSpaceAllocation;
} MXFMetadataSet;
typedef struct _MXFHeaderMetadata
{
    MXFDataModel* dataModel;
    MXFPrimerPack* primerPack;
    MXFList sets;
} MXFHeaderMetadata;
typedef struct
{
    MXFMetadataItem* item;
    uint32_t numElements;
    uint32_t elementLength;
    uint32_t currentElement;
} MXFArrayItemIterator;
int mxf_get_array_item_count(MXFMetadataSet* set, const mxfKey* itemKey, uint32_t* count);
int mxf_get_array_item_element_len(MXFMetadataSet* set, const mxfKey* itemKey, uint32_t* elementLen);
int mxf_get_array_item_element(MXFMetadataSet* set, const mxfKey* itemKey, uint32_t index, uint8_t** element);
int mxf_initialise_array_item_iterator(MXFMetadataSet* set, const mxfKey* itemKey, MXFArrayItemIterator* arrayIter);
int mxf_next_array_item_element(MXFArrayItemIterator* arrayIter, uint8_t** value, uint32_t* length);