headers/mxf_header_metadata.pxd


    cdef int mxf_get_array_item_count(MXFMetadataSet* set, mxfKey* itemKey, uint32_t* count)
    cdef int mxf_get_array_item_element_len(MXFMetadataSet* set, mxfKey* itemKey, uint32_t* elementLen)
    cdef int mxf_get_array_item_element(MXFMetadataSet* set, mxfKey* itemKey, uint32_t index, uint8_t** element)
    
    cdef int mxf_initialise_array_item_iterator(MXFMetadataSet* set, mxfKey* itemKey, MXFArrayItemIterator* arrayIter)
    cdef int mxf_next_array_item_element(MXFArrayItemIterator* arrayIter, uint8_t** value, uint32_t* length)
    
    